--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<ion-view view-title="Dashboard">
+<ion-view view-title="Cat">
   <ion-content class="padding xcentre">
     <div class="cat-holder" on-swipe-right="onSwipeRight()" on-swipe-left="onSwipeLeft()">
       <img ng-src="{{cat}}" class="cat" />
