--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Account">
+<ion-view view-title="Hamster">
   <ion-content>
     <ion-list>
     <ion-toggle  ng-model="settings.enableFriends">
