--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -25,8 +25,8 @@ $ionicons-font-path: '../lib/ionic/fonts' !default;
 }
 
 .cat {
-  width: 100%;
-  max-height: 99vh;
+  max-width: 100%;
+  max-height: 90vh;
 }
 
 .xcentre {
