Added image preload

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -2,7 +2,7 @@
 <ion-view view-title="Cat">
   <ion-content class="padding xcentre">
     <div class="cat-holder" on-swipe-right="onSwipeRight()" on-swipe-left="onSwipeLeft()">
-      <img ng-src="img/cat0/{{cat}}.jpg" class="cat" />
+      <img ng-src="{{cat}}" class="cat" />
     </div>
   </ion-content>
 </ion-view>
